examples/test/testpolicy8875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8875
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key40: value36
      key21: value26
      key48: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value35
      podSelector:
        matchLabels:
          key13: value22
          key16: value12
          key2: value38
